# piper-kit

./: .gitignore  README.md  extract_camera.py  pyproject.toml
.github/workflows/: build.yaml  deploy.yaml
src/piper_cli/: __main__.py  interface.py
src/piper_cli/commands/: __init__.py  disable.py  enable.py
src/piper_cli/messages/: __init__.py
src/piper_cli/messages/receive/: __init__.py  joint_feedback.py  motor_info_b.py  receive.py
src/piper_cli/messages/transmit/: __init__.py  enable_joint.py  joint_control.py  motion_control_b.py  transmit.py
src/piper_kit/: __init__.py  __main__.py  errors.py  interface.py
src/piper_kit/_cli/: clear.py  disable.py  enable.py  main.py  play.py
src/piper_kit/_cli/teleop/: __init__.py  end_pose.py  follow.py  joint.py
src/piper_kit/_cli/utils/: __init__.py  app.py  recorder.py  thread.py
src/piper_kit/_commands/: __init__.py  clear.py  disable.py  enable.py  play.py
src/piper_kit/_commands/teleop/: __init__.py  end_pose.py  follow.py  joint.py
src/piper_kit/commands/: disable.py
src/piper_kit/messages/: __init__.py  receive.py  transmit.py
src/piper_kit/messages/receive/: __init__.py  gripper_feedback.py  joint_feedback.py  motor_info_b.py  receive.py  unknown.py
src/piper_kit/messages/transmit/: __init__.py  enable_joint.py  end_pose_control.py  gripper_control.py  joint_config.py  joint_control.py  motion_control_b.py  transmit.py
tests/: test_errors.py
tests/messages/: test_receive.py  test_transmit.py
