[project]
name = "piper-kit"
version = "0.1.0"
dependencies = [
  "cursers>=0.1.0",
  "python-can>=4.5.0",
]
requires-python = ">=3.13"
authors = [
  { name = "Alfi Maulana", email = "alfi.maulana.f@gmail.com" },
]
description = "SDK and CLI tools for AgileX PiPER robotic arm"
readme = "README.md"
license = "MIT"
keywords = ["robotics", "can-bus", "agilex", "piper", "robotic-arm", "automation", "sdk", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Hardware :: Hardware Drivers",
]

[project.scripts]
piper = "piper_kit.__main__:_main"

[project.urls]
repository = "https://github.com/threeal/piper-kit.git"
issues = "https://github.com/threeal/piper-kit/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "lefthook>=1.11.14",
  "pydoctor>=25.4.0",
  "pytest>=8.4.1",
  "pytest-cov>=6.2.1",
  "ruff>=0.11.13",
]

[tool.coverage.report]
fail_under = 100
omit = [
  "src/piper_kit/_commands/*",
  "src/piper_kit/messages/*",
  "src/piper_kit/__init__.py",
  "src/piper_kit/__main__.py",
]

[tool.coverage.run]
branch = true
source = ["piper_kit"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.pydoctor]
add-package = ["src/piper_kit"]
project-name = "PiPER Kit"
docformat = "google"
theme = "readthedocs"
warnings-as-errors = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "S101"]
